Styled Woo Tag Cloud Widget. Updated settings custom CSS

--- a/sass/modules/_widgets.scss
+++ b/sass/modules/_widgets.scss
@@ -1,4 +1,4 @@
-#secondary .widget, 
+#secondary .widget,
 #colophon .widget {
 
 	.widget-title {
@@ -8,7 +8,7 @@
 		margin: 0 0 1.6em;
 		text-transform: uppercase;
 	}
-	
+
 	// Set the font size of elements below the widget title to 14px.
 	~ * {
 		@include font-size(0.9333);
@@ -17,33 +17,33 @@
 	a {
 		color: $color__text-medium;
 		text-decoration: none;
-		
+
 		&:hover {
 			color: $color__primary-accent;
-		} 
+		}
 	}
 
 	ul {
 		list-style: none;
-		margin: 0; 
-		
+		margin: 0;
+
 		li {
-			border-bottom: 1px solid $color__background-hr; 
+			border-bottom: 1px solid $color__background-hr;
 			@include font-size(0.8666);
 			line-height: normal;
 			padding: 1.25em 0;
-			
+
 			&:first-of-type {
-				padding-top: 0; 
+				padding-top: 0;
 			}
 		}
-	}				
+	}
 }
 
 #secondary {
 
 	.widget {
-		margin-bottom: 4em; 
+		margin-bottom: 4em;
 	}
 }
 
@@ -53,27 +53,27 @@
 .widget #wp-calendar {
 	border: none;
 	margin: 0;
-	
-	caption { 
+
+	caption {
 		color: $color__text-dark;
-		font-family: $font__main; 
+		font-family: $font__main;
 		@include font-size(0.9333);
 		font-weight: 700;
-		padding-bottom: .4em; 
+		padding-bottom: .4em;
 		text-align: center;
 	}
 
 	tr:nth-child(2n+2) {
 		background: none;
-	}	
+	}
 
-	th, 
+	th,
 	td {
 		padding: 0;
 	}
 
 	thead {
-		border-bottom: 1px solid $color__background-hr; 
+		border-bottom: 1px solid $color__background-hr;
 
 		tr {
 			background: none;
@@ -96,29 +96,29 @@
 			padding-top: .7em;
 		}
 
-		td { 
+		td {
 			padding-bottom: .5em;
 			text-align: center;
-		}		
+		}
 	}
-	
+
 	tfoot {
 
-		#prev, 
+		#prev,
 		#next {
 			@include font-size(0.9333);
-			
+
 			a {
 				color: $color__primary-accent;
 
 				&:hover {
 					color: $color__primary-accent-dark;
-				}				
+				}
 			}
 		}
 
 		#next {
-			text-align: right;			
+			text-align: right;
 		}
 	}
 }
@@ -129,9 +129,9 @@
 .widget_recent_entries {
 
 	a {
-		padding-bottom: 0.5em; 
+		padding-bottom: 0.5em;
 	}
-	
+
 	.post-date {
 		color: $color__text-light;
 		display: block;
@@ -143,7 +143,7 @@
 /*--------------------------------------------------------------
 ## Search Widget
 --------------------------------------------------------------*/
-#secondary .widget_search, 
+#secondary .widget_search,
 #colophon .widget_search {
 
 	.search-form {
@@ -153,17 +153,17 @@
 			box-sizing: border-box;
 			padding-right: 2em;
 			max-width: 100%;
-			width: 100%; 
+			width: 100%;
 		}
 
 		button[type="submit"] {
 			border: none;
 			padding: .65em;
-			padding-left: 0.89375em; 
+			padding-left: 0.89375em;
 			position: absolute;
 			top: .2em;
 			right: 1.269em;
-			
+
 			svg {
 				fill: $color__text-medium;
 				height: 1.2666em;
@@ -179,7 +179,7 @@
 #page .widget_tag_cloud {
 
 	a {
-		border: 1px solid $color__border-button;
+		border: 1px solid $color__background-hr;
 		color: $color__text-medium;
 		display: inline-block;
 		@include font-size(0.9333); // 15px base.
@@ -189,14 +189,14 @@
 		text-decoration: none;
 
 		&:hover {
-			background: $color__text-medium;
-			border-color: $color__text-medium; 
-			color: #fff;
-		}		
+			background: $color__primary-accent;
+			border-color: $color__primary-accent;
+			color: #fff !important;
+		}
 	}
 }
 
-#secondary .widget_tag_cloud, 
+#secondary .widget_tag_cloud,
 #colophon .widget_tag_cloud {
 	@include font-size(0.9285); // 14px base.
 }
