--- a/sass/woocommerce/_widgets.scss
+++ b/sass/woocommerce/_widgets.scss
@@ -57,5 +57,25 @@
 			}
 		}
 
+		// Product Tag Cloud
+		.widget_product_tag_cloud {
+			a {
+				border: 1px solid $color__background-hr;
+				color: $color__text-medium;
+				display: inline-block;
+				@include font-size(0.9333); // 15px base.
+				margin: 0 .107em .45em 0;
+				padding: .7642em .9785em .6213em;
+				line-height: normal;
+				text-decoration: none;
+
+				&:hover {
+					background: $color__primary-accent;
+					border-color: $color__primary-accent;
+					color: #fff !important;
+				}
+			}
+		}
+
 	}
 }
