--- a/woocommerce.css
+++ b/woocommerce.css
@@ -660,54 +660,76 @@
 /*--------------------------------------------------------------
 # WooCommerce Widgets
 --------------------------------------------------------------*/
-.woocommerce .widget-area .widget_price_filter .ui-slider {
+.woocommerce .widget-area#secondary .widget_price_filter .ui-slider {
   background-color: #f4f4f4;
   margin: 0 0 25px 0; }
-  .woocommerce .widget-area .widget_price_filter .ui-slider .ui-slider-range,
-  .woocommerce .widget-area .widget_price_filter .ui-slider .ui-slider-handle {
+  .woocommerce .widget-area#secondary .widget_price_filter .ui-slider .ui-slider-range,
+  .woocommerce .widget-area#secondary .widget_price_filter .ui-slider .ui-slider-handle {
     background-color: #24c48a; }
-  .woocommerce .widget-area .widget_price_filter .ui-slider .ui-slider-handle {
+  .woocommerce .widget-area#secondary .widget_price_filter .ui-slider .ui-slider-handle {
     border-radius: 0;
     height: 16px;
     margin: 0;
     top: -6px;
     width: 10px; }
 
-.woocommerce .widget-area .widget_price_filter .ui-widget-content {
+.woocommerce .widget-area#secondary .widget_price_filter .ui-widget-content {
   border-radius: 0; }
 
-.woocommerce .widget-area .widget_price_filter .ui-slider-horizontal {
+.woocommerce .widget-area#secondary .widget_price_filter .ui-slider-horizontal {
   height: 3px; }
 
-.woocommerce .widget-area .widget_price_filter .price_slider_amount {
+.woocommerce .widget-area#secondary .widget_price_filter .price_slider_amount {
   text-align: left; }
-  .woocommerce .widget-area .widget_price_filter .price_slider_amount .price_label {
+  .woocommerce .widget-area#secondary .widget_price_filter .price_slider_amount .price_label {
     font-weight: light; }
-    .woocommerce .widget-area .widget_price_filter .price_slider_amount .price_label span {
+    .woocommerce .widget-area#secondary .widget_price_filter .price_slider_amount .price_label span {
       font-weight: bold; }
-  .woocommerce .widget-area .widget_price_filter .price_slider_amount .button {
+  .woocommerce .widget-area#secondary .widget_price_filter .price_slider_amount .button {
     background: transparent;
     border-radius: 0;
     border: 1px solid #f4f4f4;
     color: #626262;
     font-weight: normal;
     float: right; }
-    .woocommerce .widget-area .widget_price_filter .price_slider_amount .button:hover {
+    .woocommerce .widget-area#secondary .widget_price_filter .price_slider_amount .button:hover {
       border-color: #00a76a;
       box-shadow: none;
       color: #00a76a; }
 
-.woocommerce .widget-area .widget_product_tag_cloud a {
+.woocommerce .widget-area#secondary .widget_product_tag_cloud a {
   border: 1px solid #f4f4f4;
   color: #626262;
   display: inline-block;
-  font-size: 14.9328px;
-  font-size: 0.9333rem;
-  margin: 0 .107em .45em 0;
-  padding: .7642em .9785em .6213em;
+  font-size: 15px;
   line-height: normal;
+  margin: 0 7px 10px 0;
+  padding: 8px 10px;
   text-decoration: none; }
-  .woocommerce .widget-area .widget_product_tag_cloud a:hover {
+  .woocommerce .widget-area#secondary .widget_product_tag_cloud a:hover {
     background: #24c48a;
     border-color: #24c48a;
     color: #fff !important; }
+
+.woocommerce .widget-area#secondary .widget_products .product_list_widget li {
+  padding-bottom: 25px;
+  padding-top: 0;
+  border-bottom: none; }
+  .woocommerce .widget-area#secondary .widget_products .product_list_widget li img {
+    float: left;
+    margin-left: 0;
+    margin-right: 20px;
+    width: 70px; }
+  .woocommerce .widget-area#secondary .widget_products .product_list_widget li .product-title {
+    display: inline-block;
+    padding: 10px 0; }
+  .woocommerce .widget-area#secondary .widget_products .product_list_widget li .amount {
+    color: #24c48a;
+    display: inline; }
+  .woocommerce .widget-area#secondary .widget_products .product_list_widget li ins {
+    background: transparent; }
+  .woocommerce .widget-area#secondary .widget_products .product_list_widget li del {
+    color: #adadad; }
+    .woocommerce .widget-area#secondary .widget_products .product_list_widget li del .amount {
+      color: #adadad;
+      display: inline; }
