--- a/style.css
+++ b/style.css
@@ -561,14 +561,13 @@ input[type="time"],
 input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"] {
-  font-size: 14.9328px;
-  font-size: 0.9333rem;
+  font-size: 14px;
   outline: none;
-  padding: .43em 1.7857em; }
+  padding: 5px 15px; }
 
 textarea {
   outline: none;
-  padding: 0.9285em 1.7857em;
+  padding: 5px 15px;
   width: 100%; }
 
 /*--------------------------------------------------------------
@@ -1188,22 +1187,21 @@ a {
   #secondary .widget_search .search-form input[type="search"],
   #colophon .widget_search .search-form input[type="search"] {
     box-sizing: border-box;
-    padding-right: 2em;
     max-width: 100%;
     width: 100%; }
   #secondary .widget_search .search-form button[type="submit"],
   #colophon .widget_search .search-form button[type="submit"] {
     border: none;
-    padding: .65em;
-    padding-left: 0.89375em;
+    padding: 7px;
+    padding-left: 8px;
     position: absolute;
-    top: .2em;
-    right: 1.269em; }
+    right: 15px;
+    top: 3px; }
     #secondary .widget_search .search-form button[type="submit"] svg,
     #colophon .widget_search .search-form button[type="submit"] svg {
       fill: #626262;
-      height: 1.2666em;
-      width: 1.3333em; }
+      height: 16px;
+      width: 16px; }
 
 /*--------------------------------------------------------------
 ## Tag Cloud Widget
