--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -11,6 +11,7 @@ textarea {
 	font-family: $font__main;
 	font-size: 15px;
 	font-size: 1em;
+	@include font-smoothing(subpixel-antialiased);
 	font-weight: 400; 
 	line-height: $font__line-height-body;
 }
