--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -249,7 +249,7 @@
 ## Jetpack Sharing
 --------------------------------------------------------------*/
 .share-this {
-	font-size: 1em;
+	font-size: 13px;
 }
 
 .single-post .sharedaddy .sd-content {
@@ -363,8 +363,7 @@
 		@include clearfix;
 		color: $color__text-medium;
 		@include font-size(0.9333);
-		margin-left: 2em;
-		padding-left: 120px;
+		padding-left: 100px;
 
 		@media (max-width: 480px) {
 			padding-left: 0;
