--- a/style.css
+++ b/style.css
@@ -1633,7 +1633,7 @@ a {
 ## Jetpack Sharing
 --------------------------------------------------------------*/
 .share-this {
-  font-size: 1em; }
+  font-size: 13px; }
 
 .single-post .sharedaddy .sd-content {
   padding: 1em 0 1.5em;
@@ -1731,8 +1731,7 @@ a {
     color: #626262;
     font-size: 14.9328px;
     font-size: 0.9333rem;
-    margin-left: 2em;
-    padding-left: 120px; }
+    padding-left: 100px; }
     .author-box .author-description::after {
       clear: both;
       content: "";
