--- a/style.css
+++ b/style.css
@@ -1964,8 +1964,13 @@ a {
       color: #2d2d2d; }
 
 #commentform .form-submit {
-  margin: 2em 0 0 0;
+  margin: 2em 0 20px;
   clear: both; }
+
+#commentform .comment-subscription-form {
+  margin: 0 0 8px; }
+  #commentform .comment-subscription-form label {
+    color: #626262; }
 
 /*--------------------------------------------------------------
 ## Site Footer
