--- a/woocommerce.css
+++ b/woocommerce.css
@@ -650,3 +650,5 @@
     .woocommerce-cart .wc-proceed-to-checkout a.checkout-button {
       width: 100%;
       margin-bottom: 10px; } }
+
+/*# sourceMappingURL=sass/maps/woocommerce.css.map */
